# JSON-Search-Engine

./: .gitignore  AVL_Tree.h  Answers.md  CMakeLists.txt  Document_Parser.h  Index_Handler.h  Query_Processor.h  README.md  main.cpp  test_AVL_Tree.cpp  test_Index_Handler.cpp  test_Query_Processor.cpp
porter2/: hash.h  porter2_stemmer.cpp  porter2_stemmer.h  string_view.h
sample_data/coll_1/: news_0064567.json  news_0064568.json  news_0064569.json
sample_data/coll_2/: news_0064570.json  news_0064571.json
